--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>hello world</h1>
+<app-elements-home></app-elements-home>
+<app-collections-home></app-collections-home>
 <router-outlet></router-outlet>
