--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-elements-home></app-elements-home>
-<app-collections-home></app-collections-home>
+<!-- <app-elements-home></app-elements-home>
+<app-collections-home></app-collections-home> -->
+<h1>Hello World!</h1>
 <router-outlet></router-outlet>
