--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,9 @@
-<p>elements-home works!</p>
+<app-divider>PlaceHolder</app-divider>
+<app-place-holder [lines]="2" [header]="true"></app-place-holder>
+<app-divider>Segment</app-divider>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i> No documents are listed for this customer.
+    </header>
+    <div class="ui primary button">Add Document</div>
+</app-segment>
