add table component

--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,2 +1,2 @@
-<app-divider></app-divider>
-<p>collections-home works!</p>
+<app-divider>Table Component</app-divider>
+<app-table [data]="data" [headers]="headers" [customClass]="'celled'"></app-table>
