add childe routing

--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,2 +1,23 @@
 <app-divider>Table Component</app-divider>
 <app-table [data]="data" [headers]="headers" [customClass]="'celled'"></app-table>
+<app-divider>Table Component</app-divider>
+<div class="ui grid">
+    <div class="four wide column">
+        <div class="ui vertical fluid tabular menu">
+            <a routerLink="collections" routerLinkActive="router-link-active" class="active item">
+                Bio
+            </a>
+            <a routerLink="companies" class="item">
+                Companies
+            </a>
+            <a routerLink="partners" class="item">
+                Partners
+            </a>
+        </div>
+    </div>
+    <div class="twelve wide stretched column">
+        <div class="ui segment">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
